--- a/index.html
+++ b/index.html
@@ -109,12 +109,15 @@
             </a>
           </div>
 
+          <!-- REPLACE your profile card HTML with this -->
+
           <div class="hero-right">
             <div class="profile-card">
               <div class="profile-pics-container"></div>
               <div class="profile-nav"></div>
             </div>
           </div>
+          
         </header>
 
         <section id="about" class="section">
@@ -312,7 +315,7 @@
               <div class="skill-tags">
                 <span class="skill-tag">C / C++</span>
                 <span class="skill-tag">Python</span>
-                <span class="skill-tag">JavaScript</span>
+                <span class="skill-tag">Vibe Coding ;)</span>
                 <span class="skill-tag">Git</span>
                 <span class="skill-tag">Html/Css</span>
               </div>
@@ -461,9 +464,6 @@
             sensing and programmed servo actuation logic to trigger reliable
             gripping. Produced engineering drawings and refined the mechanical
             design to ensure smooth operation and repeatable performance.
-            Performed top in the class. I was in charge of coming up with the
-            design, constructing the claw, writing the code, and doing the
-            engineer drawings...
           </p>
           <p>
             <strong>What I Learned:</strong> Solidworks sheetmetal design,
@@ -479,7 +479,7 @@
     <div id="wedoo-modal" class="project-modal">
       <div class="modal-content">
         <span class="close" onclick="closeProject('wedoo')">&times;</span>
-        <h3>Wedoo - Hackathon Project</h3>
+        <h3>Wedoo - nwHacks 26'</h3>
         <div class="carousel">
           <div class="carousel-track">
             <img
@@ -508,7 +508,7 @@
         </div>
         <div class="modal-details">
           <p>
-            <strong>Description:</strong> Wedoo is a group accountability app
+            <strong>Description:</strong> Fueled by 2 redbulls and < 1 hour of sleep, Wedoo is a group accountability app
             designed to help people build habits together. Users join shared
             spaces using group codes, track progress on tasks, and stay
             motivated through collective visibility and feedback. Built with
