--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <p class="exp-description">
               First year student planning to enter mechanical engineering with a
-              specialization in mechatronics. Predicted graduation: April 2030.
+              specialization in mechatronics.
             </p>
           </div>
 
@@ -164,7 +164,7 @@
           <div class="experience-item">
             <div class="exp-header">
               <h3>Film & Television Actor</h3>
-              <span class="exp-date">2015 - Present</span>
+              <span class="exp-date">2015 - 2025 (on pause)</span>
             </div>
             <div class="exp-company">
               <a
@@ -207,7 +207,7 @@
                 <h3>SUBC Submarine Drivetrain</h3>
                 <p>
                   Designed, manufactured, and optimized the human-powered
-                  drivetrain for the competition submarine.
+                  drivetrain for our competition submarine.
                 </p>
               </div>
 
@@ -399,11 +399,7 @@
         </div>
         <div class="modal-details">
           <p>
-            <strong>Description:</strong> Designed and prototyped the
-            human-powered drivetrain for the 2025/26 competition submarine;
-            modelled components in SolidWorks and CNC-manufactured assemblies.
-            Performed FEA-driven optimization to reduce gearbox mass by 60%
-            while maintaining structural integrity and performance.
+            <strong>Description:</strong> Designed and manufactured the human-powered drivetrain for the 25/26 competition submarine. In particular, I was in charge of concept generation, optimization, and manufacturing of the side plates and step-down collar. I modelled the components in SolidWorks, performed FEA-driven optimization, and worked with a machinist to CNC the components. This work reduced the gearbox's weight by 50% and completely eliminate output gear slippage.
           </p>
           <p>
             <strong>What I Learned:</strong> Mechanical design, power
