--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
 
             <a
-              href="assets/resume.pdf"
+              href="assets/LairdsResume.pdf"
               target="_blank"
               download
               class="resume-button-hero"
