--- a/index.html
+++ b/index.html
@@ -109,8 +109,6 @@
             </a>
           </div>
 
-          <!-- REPLACE your profile card HTML with this -->
-
           <div class="hero-right">
             <div class="profile-card">
               <div class="profile-pics-container"></div>
@@ -298,35 +296,38 @@
           <h2 class="section-title">skills</h2>
           <div class="skills-grid">
             <div class="skill-category">
-              <h3 class="skill-cat-title">Design & Manufacturing</h3>
+              <h3 class="skill-cat-title">Mechanical Design</h3>
               <div class="skill-tags">
                 <span class="skill-tag">CAD</span>
                 <span class="skill-tag certified">
                   SolidWorks
                   <span class="cert-badge">CSWA</span>
                 </span>
-                <span class="skill-tag">3D Printing</span>
-                <span class="skill-tag">CNC</span>
+                <span class="skill-tag">DFM/DFA</span>
+                <span class="skill-tag">FEA</span>
+                <span class="skill-tag">Prototyping</span>
               </div>
             </div>
 
             <div class="skill-category">
-              <h3 class="skill-cat-title">Programming</h3>
+              <h3 class="skill-cat-title">Analysis & Programming</h3>
               <div class="skill-tags">
+                <span class="skill-tag">MATLAB</span>
                 <span class="skill-tag">C / C++</span>
                 <span class="skill-tag">Python</span>
                 <span class="skill-tag">Vibe Coding ;)</span>
                 <span class="skill-tag">Git</span>
                 <span class="skill-tag">Html/Css</span>
+                <span class="skill-tag">OpenCV</span>
               </div>
             </div>
 
             <div class="skill-category">
-              <h3 class="skill-cat-title">Robotics</h3>
+              <h3 class="skill-cat-title">Manufacturing</h3>
               <div class="skill-tags">
-                <span class="skill-tag">OpenCV</span>
-                <span class="skill-tag">ESP32</span>
-                <span class="skill-tag">Arduino</span>
+                <span class="skill-tag">3D_Printing</span>
+                <span class="skill-tag">CNC</span>
+                <span class="skill-tag">Machining (Mill, Lathe, Band Saw, etc.)</span>
               </div>
             </div>
           </div>
