--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <div class="skill-category">
               <h3 class="skill-cat-title">Manufacturing</h3>
               <div class="skill-tags">
-                <span class="skill-tag">3D_Printing</span>
+                <span class="skill-tag">3D-Printing</span>
                 <span class="skill-tag">CNC</span>
                 <span class="skill-tag">Machining (Mill, Lathe, Band Saw, etc.)</span>
               </div>
