--- a/index.html
+++ b/index.html
@@ -85,13 +85,7 @@
               </div>
             </div>
 
-            <a
-              href="assets/LairdsResume.pdf"
-              target="_blank"
-              download
-              class="resume-button-hero"
-              >resume</a
-            >
+            <a href="assets/LairdsResume.pdf" target="_blank" rel="noopener noreferrer" class="resume-button-hero">resume</a>
 
             <a href="#about" class="scroll-indicator">
               <span class="scroll-text">scroll to see more</span>
